# streamops-agent

./: .gitignore  LICENSE  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml  secret-scan.yml
config/: prometheus.yml
demo-output/examples/: README.md  backpressure_example_incident.json  checkpoint-timeout_example_incident.json  error-burst_example_incident.json  latency-spike_example_incident.json  memory-pressure_example_incident.json  (+1 more)
docs/: TRUST_BOUNDARIES.md  fork-diagnostics-runbook.md  llm-cost-optimization.md
java/: pom.xml
java/proto/: pom.xml
mcp-server/: pyproject.toml
mcp-server/src/streamops_mcp/: _proto_helper.py  config.py  logging_setup.py  server.py
mcp-server/src/streamops_mcp/agent/: audit.py  escalation.py  executor.py  main.py  monitor.py  sanitize.py  tools.py  volatility.py
mcp-server/src/streamops_mcp/agent/schemas/: __init__.py  diagnosis.py  handoff.py  incident.py
mcp-server/src/streamops_mcp/prompts/: __init__.py  diagnostic.md  monitor.md  report.md
mcp-server/src/streamops_mcp/prompts/runbooks/: backpressure.md  checkpoint-failure.md  consumer-lag.md  latency-spike.md  out-of-order.md
mcp-server/src/streamops_mcp/tools/: events.py  flink.py  kafka.py  prometheus.py
mcp-server/tests/: test_audit.py  test_config.py  test_escalation.py  test_executor.py  test_flink_tools.py  test_logging_setup.py  test_monitor.py  test_prometheus_tools.py  test_prompts.py  test_runbooks.py  test_sanitize.py  test_schemas.py  test_steering.py  test_volatility.py
mcp-server/tests/steering-examples/: backpressure.json  checkpoint-failure.json  consumer-lag.json  error-burst.json  latency-spike.json
scripts/: check.py  demo_scenario.py
(+31 files in other folders)
