[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamops-mcp"
version = "0.1.0"
description = "MCP server exposing streaming infrastructure observability tools"
requires-python = ">=3.11"
dependencies = [
    # MCP SDK for building tool servers
    "mcp[cli]>=1.0.0",
    # Claude API for the agent layer (agentic loop, tool_use, structured output)
    "anthropic>=0.40.0",
    # HTTP client for Flink REST API and Prometheus queries
    "httpx>=0.27.0",
    # Kafka consumer for event retrieval and log search
    "confluent-kafka>=2.6.0",
    # Protobuf for StreamEvent deserialization
    "protobuf>=5.0.0",
    # Settings management with env var support
    "pydantic-settings>=2.0.0",
    # YAML parsing for prompt frontmatter
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
    "types-protobuf>=5.0.0",
]

[project.scripts]
streamops-mcp = "streamops_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# E501 (line length) is deferred to a formatter pass: many tool/schema descriptions
# are intentionally long LLM prompt strings a formatter won't split. Tracked in #67.
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/streamops_mcp"]
